# social-agent

./: .gitignore  CONTEXT.md  README.md  pyproject.toml
.github/workflows/: ci.yml  social-agent.yml
config/: profile.yaml  seeds.yaml
docs/: decision-log.md  expense-log.md  implementation-plan.md
src/social_agent/: __init__.py  bootstrap.py  cli.py  config.py  content_scout.py  draft_review.py  drafting.py  engagement.py  github_sources.py  history.py  idea_inventory.py  learning.py  models.py  openai_client.py  policies.py  publication.py  ranking.py  reviews.py  runtime.py  scheduling.py  state.py  state_store.py  summary.py  telegram.py  workflows.py  x_client.py
tests/: test_cli.py  test_content_scout.py  test_draft_review.py  test_github_and_telegram.py  test_models_and_policies.py  test_openai_client.py  test_telegram.py  test_workflows.py  test_x_client.py
